# Dev-Planner

./: .gitignore  Dev Tool.spec  LICENSE  README.md  README.ru.md  dmg_settings.py  main.py  package-lock.json  req.txt
.gemini/: rules.md
.github/workflows/: build.yml
beta v1.0.0/Dev Planner.app/Contents/: Info.plist
beta v1.0.0/Dev Planner.app/Contents/Resources/: icon.icns
beta v1.0.0/Dev Planner.app/Contents/Resources/src/core/: config.py  storage.py  task_node.py
beta v1.0.0/Dev Planner.app/Contents/Resources/src/ui/: __init__.py  ai_chat.py  canvas.py  main_window.py  widgets.py
beta v1.0.0/Dev Planner.app/Contents/_CodeSignature/: CodeResources
cpp/: CMakeLists.txt
cpp/installer/: windows.nsi
cpp/resources/: app.icns
cpp/src/: main.cpp
cpp/src/ai/: ai_action.hpp  ai_action_manager.cpp  ai_action_manager.hpp  ai_action_registry.cpp  ai_action_registry.hpp  clear_all_action.cpp  clear_all_action.hpp  connect_tasks_action.cpp  connect_tasks_action.hpp  create_task_action.cpp  create_task_action.hpp  create_tasks_chain_action.cpp  create_tasks_chain_action.hpp  delete_task_action.cpp  delete_task_action.hpp  rename_task_action.cpp  rename_task_action.hpp  set_status_action.cpp  set_status_action.hpp
cpp/src/ai/actions/: arrange_action.hpp  clear_all_action.hpp  connect_action.hpp  connect_many_action.hpp  create_chain_action.hpp  create_task_action.hpp  delete_action.hpp  delete_many_action.hpp  disconnect_action.hpp  rename_action.hpp  set_description_action.hpp  set_many_status_action.hpp  set_status_action.hpp
cpp/src/core/: config.hpp  storage.cpp  storage.hpp
cpp/src/ui/: ai_chat_panel.cpp  ai_chat_panel.hpp  glassmorphism_widget.cpp  glassmorphism_widget.hpp  live_background.cpp  live_background.hpp  main_window.cpp  main_window.hpp  modern_button.cpp  modern_button.hpp  node_canvas.cpp  node_canvas.hpp  task_node.cpp  task_node.hpp
server/: README.md  deploy.sh  package.json
server/src/: app.module.ts  main.ts
server/src/collab/: collab.gateway.ts  collab.service.ts
src/: __init__.py
src/core/: __init__.py  collab.py  config.py  storage.py  task_node.py
src/ui/: ai_chat.py  canvas.py  main_window.py  widgets.py
